# QRubik

./: CMakeLists.txt  GLee.cpp  GLee.h  README.md  camera.cpp  camera.h  cubie.cpp  cubie.h  face.cpp  face.h  facecubie.cpp  facecubie.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrices.cpp  matrices.h  mesh.cpp  mesh.h  moviment.h  openglwindow.cpp  openglwindow.h  point3.cpp  point3.h  rotation.cpp  rotation.h  rubixcube.cpp  rubixcube.h  src.qrc  utils.cpp  utils.h  vectors.h  vertexid.cpp  vertexid.h
